--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
         <title>Ali Khodarahmi</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Hi! how are you?</h1>
-        <p>
-            I'm Ali Khodarahmi. Born in 2009. I'm Iranian. I work in the field of computer science, web programming, and software development.
-        </p>
-        <p>Please follow <a href="https://github.com/ali-khodarahmi-developer" target="_blank">My github account</a></p>
+        <div class="container">
+            <h1>Hi! How are you?</h1>
+            <p>
+            I'm Ali Khodarahmi. Born in 2009, I'm Iranian. I work in the field of computer science, web programming, and software development.
+            </p>
+            <p>
+            Please follow <a href="https://github.com/ali-khodarahmi-developer" target="_blank">My github account</a>.
+            </p>
+        </div>
     </body>
 </html>
