--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,12 @@
         <div class="menu-toggle" id="menuToggle">☰</div>
       </header>
       <main>
-        <h1 class="fade-in">Hi! I'm Ali Khodarahmi.</h1>
+        <h1 class="fade-in">Contact</h1>
         <p class="lead fade-in">
-            Born in 2009, I'm Iranian. I work in the field of computer science, web programming, and software development.
+            <h4>Telegram channel : <a href="https://t.me/ali_khodarahmi_developer">https://t.me/ali_khodarahmi_developer</a></h4>
+            <br>
+            <h4>Phone number : +989190677814 & +989963429565</h4>
         </p>
-        <div class="profile fade-in">
-          <div class="skills">
-            <h2>My Skills</h2>
-            <span>HTML - CSS - Python + Flask & Django - C# - Javascript</span>
-          </div>
-        </div>
       </main>
     </div>
     <script src="script.js"></script>
