--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
       <main>
         <h1 class="fade-in">Contact</h1>
         <p class="lead fade-in">
-            <h4>Telegram channel : <a href="https://t.me/ali_khodarahmi_developer">https://t.me/ali_khodarahmi_developer</a></h4>
+            <h4>Telegram channel : <a href="https://t.me/ali_khodarahmi_developer">@ali_khodarahmi_developer</a></h4>
             <br>
-            <h4>Phone number : +989190677814 & +989963429565</h4>
+            <h4>Phone number : <span class="phone">+989190677814 & +989963429565</span></h4>
         </p>
       </main>
     </div>
