--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,14 @@
             <h4>Telegram channel : <a href="https://t.me/ali_khodarahmi_developer">@ali_khodarahmi_developer</a></h4>
             <br>
             <h4>Phone number : <span class="phone">+989190677814 & +989963429565</span></h4>
+            <br>
+            <h4>Email : <span class="phone">ali.khodarahmi.dev@gmail.com</span></h4>
+            <br>
+            <h4>Github page : <a href="https://github.com/ali-khodarahmi-developer">@ali_khodarahmi_developer</a></h4>
         </p>
       </main>
     </div>
     <script src="script.js"></script>
   </body>
 </html>
+
