--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,12 @@
             <br>
             <h4>Email : <span class="phone">ali.khodarahmi.dev@gmail.com</span></h4>
             <br>
-            <h4>Github page : <a href="https://github.com/ali-khodarahmi-developer">@ali_khodarahmi_developer</a></h4>
+            <h4>Github page : <a href="https://github.com/ali-khodarahmi-developer">Go to github page ( Click here )</a></h4>
         </p>
       </main>
     </div>
     <script src="script.js"></script>
   </body>
 </html>
+
 
