--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <br>
             <h4>Phone number : <span class="phone">+989190677814 & +989963429565</span></h4>
             <br>
-            <h4>Email : <span class="phone">ali.khodarahmi.dev@gmail.com</span></h4>
+            <h4>Email : <span class="phone">ali.khodarahmi.developer@gmail.com</span></h4>
             <br>
             <h4>Github page : <a href="https://github.com/ali-khodarahmi-developer">Go to github page ( Click here )</a></h4>
         </p>
